regression/fail/datatype.1.sml
datatype t = T of int * t
withtype t = real
